# tier4_perception_dataset

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analyze.py  build.sh  build_depends.repos  makefile  pyproject.toml  run.sh  setup.cfg  sync_anns.py
.github/: pull_request_template.md
.github/workflows/: build-and-test-humble.yaml  build-and-test-jazzy.yaml  build-and-test.yaml  cancel-previous-workflows.yaml  github-release.yaml  pre-commit.yml  push-release-tag.yml  semantic-pull-request.yaml
config/: add_2d_attribute.yaml  align_non_annotated_t4_to_reference_sample.yaml  convert_annotated_t4_tlr_to_deepen_sample.yaml  convert_annotated_t4_to_deepen_sample.yaml  convert_annotated_t4_to_kognic_sample.yaml  convert_camera_only_rosbag2_to_non_annotated_t4_sample.yaml  convert_comlops_rosbag2_to_non_annotated_t4_sample.yaml  convert_deepen_to_t4_komatsu.yaml  convert_deepen_to_t4_lidarseg_3d_painting_sample.yaml  convert_deepen_to_t4_paint_sample.yaml  convert_deepen_to_t4_sample.yaml  convert_deepen_to_t4_segmentation_painting_sample.yaml  convert_deepen_to_t4_segmentation_polygon_sample.yaml  convert_deepen_to_t4_segmentation_sample.yaml  convert_deepen_to_t4_segmentation_zip_sample.yaml  convert_deepen_to_t4_segmetation_painting_sample.yaml  convert_deepen_to_t4_segmetation_polygon_sample.yaml  convert_deepen_to_t4_tlr_sample.yaml  convert_fastlabel_2d_semantic_to_t4_tlr.yaml  convert_fastlabel_2d_to_t4.yaml  convert_fastlabel_2d_to_t4_tlr.yaml  convert_fastlabel_3d_to_t4.yaml  convert_fastlabel_to_t4.yaml  convert_fastlabel_to_t4_#7_0822.yaml  convert_kognic_annotation_to_t4_sample.yaml  convert_kognic_to_non_annotated_t4_sample.yaml  convert_non_annotated_t4_tlr_to_deepen_sample.yaml  convert_non_annotated_t4_to_basic_ai_sample.yaml  convert_non_annotated_t4_to_deepen_lidar.yaml  convert_non_annotated_t4_to_deepen_sample.yaml  convert_non_annotated_t4_to_kognic_sample.yaml  convert_rosbag2_to_non_annotated_t4_drs.yaml  convert_rosbag2_to_non_annotated_t4_drs_10hz.yaml  convert_rosbag2_to_non_annotated_t4_lidar.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024_4.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024_5.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024_data2.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024_data3.yaml  convert_rosbag2_to_non_annotated_t4_rx2_march_2024_data4.yaml  (+30 more)
config/label/: attribute.yaml  object.yaml  surface.yaml  traffic_light.yaml
config/rosbag2_to_t4/: convert_pseudolabel_lidar.yaml  convert_pseudolabel_synthetic.yaml  convert_rosbag2_to_annotated_t4_tlr.yaml  convert_rosbag2_to_anotated_t4_tlr.yaml  convert_rosbag2_to_localization_evaluation.yaml  convert_rosbag2_to_planning_control_evaluation.yaml  convert_rosbag2_with_gt_to_annotated_t4_tlr.yaml  convert_scenario_sim_to_tracking_eval.yaml  convert_synthetic_data.yaml  convert_synthetic_data_camera.yaml  convert_tracking_debugger_to_tracking_eval.yaml  topic_list_tlr.yaml
docs/: kognic_to_t4.md  localization_evaluation_conversions.md  t4_format_3d_detailed.md  tier_iv_t4_extractor_to_kognic.md  tools_overview.md  tracking_simulator_conversions.md  traffic_light_dataset.md
docs/tasks/: interpolate.md
label_data/tlr_annotation/: rosbag2_2024_03_02-09_51_17_1_CAM_FRONT_WIDE_00516.jpg.json
perception_dataset/: __init__.py  abstract_converter.py  abstract_converter_to_t4.py  check_frame_drop.py  configurations.py  constants.py  convert.py  validate_t4_dataset.py
perception_dataset/basic_ai/: non_annotated_t4_to_basic_ai_converter.py  utils.py
perception_dataset/deepen/: annotated_t4_tlr_to_deepen_converter.py  annotated_t4_to_deepen_converter.py  (+14 more)
rosbag_converter/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
rosbag_converter/docker/: Dockerfile  Dockerfile.runtime  dev_build.sh  dev_run.sh  parse_runtime_build_yaml.py  runtime_build.sh  runtime_build.yaml  runtime_convert.sh  runtime_entrypoint.sh  runtime_python_requirements.txt  runtime_run.sh  workspace_build_smoke.sh
rosbag_converter/docs/: concat_demo_script.py  sample_config.yaml  undistort_demo_script.py
rosbag_converter/scripts/: merge_old_concat_into_new_bag.py
rosbag_converter/t4dataset_rosbag_converter/: __init__.py  calibration.py  camera_calibration.py  cli.py  concat.py  config.py  converter.py  decode.py  geometry.py  models.py  motion.py  pcd.py  pointcloud.py  rosbag.py  tf_manager.py  writer.py
rosbag_converter/tests/: test_converter_config.py
t4-devkit/: README.md  mkdocs.yaml  pyproject.toml
t4-devkit/docs/: index.md  tutorial.md
t4-devkit/docs/apis/: common.md  schema.md  tier4.md
t4-devkit/docs/css/: mkdocstrings.css
t4-devkit/docs/tutorials/: customize.md  initialize.md  render.md
t4-devkit/t4_devkit/: __init__.py  tier4.py  typing.py
t4-devkit/t4_devkit/common/: __init__.py  box.py  color.py  geometry.py  io.py  timestamp.py
t4-devkit/t4_devkit/schema/: __init__.py  builder.py  name.py  serialize.py
t4-devkit/t4_devkit/schema/fields/: __init__.py  attribute.py  base.py  calibrated_sensor.py  category.py  ego_pose.py  instance.py  keypoint.py  log.py  map.py  object_ann.py  sample.py  sample_annotation.py  sample_data.py  scene.py  sensor.py  surface_ann.py  visibility.py
t4-devkit/t4_devkit/schema/tables/: __init__.py  attribute.py  base.py  calibrated_sensor.py  category.py  ego_pose.py  instance.py  keypoint.py  log.py  map.py  object_ann.py  registry.py  sample.py  sample_annotation.py  sample_data.py  scene.py  sensor.py  surface_ann.py  visibility.py
t4-devkit/t4_devkit/utils/: __init__.py  geometry.py
t4-devkit/tests/common/: test_geometry.py
t4-devkit/tests/schema/: test_schema_name.py
t4-devkit/tests/schema/tables/: test_sample_data_table.py  test_sensor_table.py  test_visibility_schema.py
tests/: conftest.py  constants.py  test_annotated_tlr_dataset_conversion.py  test_lm_regression_dataset_conversion.py  test_t4_dataset_conversion.py  test_table_handler.py  test_tlr_dataset_conversion.py  test_tracking_sim_dataset_conversion.py
(+153 files in other folders)
