[project]
name = "perception-dataset"
version = "1.0.30"
description = "TIER IV Perception dataset has modules to convert dataset from rosbag to t4_dataset"
authors = [
    { name = "Yusuke Muramatsu", email = "yusuke.muramatsu@tier4.jp" },
    { name = "Shunsuke Miura", email = "shunsuke.miura@tier4.jp" },
]
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24.2"
PyYAML = "^6.0"
nptyping = "^2.2.0"
Pillow = "^10.2.0"
scipy = "^1.9.0"
python-json-logger = "^2.0.4"
opencv-python = "^4.6.0"
pydantic = "^2.8.2"
lark = "^1.1.2"
loguru = "^0.6.0"
numba = ">0.56.4"
requests = "^2.28.2"
matplotlib = "3.9.2"
fastlabel = "^0.16.1"
scikit-image = "^0.24.0"
t4-devkit = { git = "https://github.com/tier4/t4-devkit.git", rev = "v0.6.0" }
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.3.1"]

[tool.black]
line_length = 99

[tool.isort]
line_length = 99
profile = "black"
force_sort_within_sections = true
reverse_relative = true
