[project]
name = "perception-dataset"
version = "1.0.34"
description = "TIER IV Perception dataset has modules to convert dataset from rosbag to t4_dataset"
authors = [
    { name = "Yusuke Muramatsu", email = "yusuke.muramatsu@tier4.jp" },
    { name = "Shunsuke Miura", email = "shunsuke.miura@tier4.jp" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.2",
    "PyYAML>=6.0,<7",
    "nptyping>=2.2.0,<3",
    "Pillow>=10.2.0,<11",
    "scipy>=1.9.0,<2",
    "python-json-logger>=2.0.4,<3",
    "opencv-python>=4.6.0,<5",
    "pydantic>=2.8.2,<3",
    "lark>=1.1.2,<2",
    "loguru>=0.6.0,<0.7",
    "numba>0.56.4",
    "requests>=2.28.2,<3",
    "matplotlib==3.9.2",
    "fastlabel>=0.16.1,<0.17",
    "scikit-image>=0.24.0,<0.25",
    "t4-devkit",
    "colorama>=0.4.6,<0.5",
    "pypcd4>=1.4.3,<2",
    "httpx>=0.28.1,<0.29",
    "kognic-auth>=3.10.0,<4",
    "kognic-io>=2.13.1,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.1,<8",
    "pytest-asyncio>=0.18.3,<0.19",
    "pytest-mock>=3.7.0,<4",
]

[tool.uv]
# t4-devkit 0.7.0 imports click without declaring it; typer<0.25 still pulls click in.
constraint-dependencies = ["typer<0.25"]

[tool.uv.sources]
t4-devkit = { git = "https://github.com/tier4/t4-devkit.git", rev = "v0.7.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perception_dataset"]

[tool.black]
line_length = 99

[tool.isort]
line_length = 99
profile = "black"
force_sort_within_sections = true
reverse_relative = true
