<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>t4dataset_rosbag_converter</name>
  <version>0.1.0</version>
  <description>Offline rosbag converter using Nebula and Autoware pointcloud libraries.</description>
  <maintainer email="jacob@example.com">Jacob Lambert</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>autoware_sensing_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nebula_lib</exec_depend>
  <exec_depend>pandar_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
