[tool.poetry]
name = "t4-devkit"
version = "0.1.0"
description = "A toolkit to load and operate T4 dataset."
authors = ["Kotaro Uetake <kotaro.uetake@tier4.jp>"]
readme = "README.md"
packages = [{ include = "t4_devkit" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rerun-sdk = "^0.16.1"
nuscenes-devkit = "^1.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
