[tool.poetry]
name = "t4-devkit"
version = "0.1.0"
description = "A toolkit to load and operate T4 dataset."
authors = ["Kotaro Uetake <kotaro.uetake@tier4.jp>"]
readme = "README.md"
packages = [{ include = "t4_devkit" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rerun-sdk = "0.17.0"
nuscenes-devkit = "^1.1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
lark = "^1.1.9"
mkdocs = "^1.6.0"
mkdocstrings = { extras = ["python"], version = "^0.25.1" }
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
